# collab-sync

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
example/: README.md  collaborators.yaml  repositories.yaml
example/.github/workflows/: catalog.yml  sync.yml
src/collab_sync/: __init__.py  catalog.py  cli.py  sync.py  visibility.py
